--- a/lesson_10/index.html
+++ b/lesson_10/index.html
@@ -18,7 +18,7 @@
                 <div class="page-header__list">
                     <ul class="page-header__list list">
                         <li class="list__icons">
-                            <a class="list__link_active" href="#">Example</a>
+                            <a class="list__link list__link_active" href="#">Example</a>
                         </li>
                         <li class="list__icons">
                             <a class="list__link" href="Inspiration.html">Inspiration</a>
@@ -72,7 +72,7 @@
                     <div class="page-main__list">
                         <ul class="page-main__list list">
                             <li class="list__icons">
-                                <a class="list__link_active" href="#">All</a>
+                                <a class="list__link list__link_active" href="#">All</a>
                             </li>
                             <li class="list__icons">
                                 <a class="list__link" href="#">Modern</a>
